--- a/assets/style.css
+++ b/assets/style.css
@@ -41,11 +41,7 @@ hr.solid {
 
 
 
-
-
-
 body {
-	padding: 10px;
 	font-family: sans-serif;
 	background-color: black;
 }
@@ -58,7 +54,8 @@ height: 100px;
 width: 100%;
 top: 0;
 left: 0;
-padding: 0px;
+padding-left: 3vw;
+padding-top: 20px;
 }
 
 
@@ -68,12 +65,10 @@ headerfont {
 
 
 h1 {
-	margin-top: 200px
-	font-size: 200%
 }
 
 section {
-	width: 50vw;
+	width: 100vw;
 	height: auto
 	padding: 0px;
 	display: block;
@@ -112,9 +107,38 @@ image-block {
 }
 
 
-.title {
-	color: white;
-	font-size: 16px;
-	font-weight: normal;
 
+.rounded-container {
+	padding-bottom: 10px;
+	padding-top: 10px;
+	border-bottom: 1.5px solid white
+}
+
+
+img {
+	width: auto;
+	height: 400px;
+	padding-left: 3vw;
+}
+
+video {
+	width: auto;
+	height: 400px;
+	padding-left: 3vw;
+}
+
+.title {
+	font-size: 24px;
+	padding-left: 3vw;
+	font-weight: normal;
+	font-weight:300;
+}
+
+h3 {
+	color: white;
+	transition: all .3s linear;
+}
+
+h3:hover {
+	color:blue;
 }
