--- a/assets/style.css
+++ b/assets/style.css
@@ -43,19 +43,18 @@ hr.solid {
 
 body {
 	font-family: sans-serif;
-	background-color: black;
+	background-color: white;
 }
 
 
 header {
-background-color:black;
-/* position: fixed; */
-height: 100px;
+background-color:transparent;
+position: sticky;
+height: 170px;
 width: 100%;
 top: 0;
 left: 0;
-padding-left: 3vw;
-padding-top: 20px;
+padding-left: 2.65vw;
 }
 
 
@@ -64,14 +63,12 @@ headerfont {
 }
 
 
-h1 {
-}
-
 section {
 	width: 100vw;
 	height: auto
 	padding: 0px;
 	display: block;
+	border-top: 1.5px solid black
 }
 
 
@@ -81,16 +78,21 @@ a {
 }
 
 h1 {
-	font-size: 48px;
-	font-weight: bold;
-	color: white;
-	margin-bottom: 0px;
+	font-family: neue-haas-grotesk-display, sans-serif;
+	font-weight: 350;
+	text-transform: uppercase;
+	font-size: 140px;
+	color: blue;
+
 }
 
 
 p{
-	font-size: 20px;
-	color: white;
+	font-family: neue-haas-grotesk-display, sans-serif;
+	font-weight: 500;
+	text-transform: uppercase;
+	font-size: 0px;
+	color: blue;
 }
 
 figure {
@@ -109,9 +111,9 @@ image-block {
 
 
 .rounded-container {
-	padding-bottom: 10px;
-	padding-top: 10px;
-	border-bottom: 1.5px solid white
+	padding-bottom: 5px;
+	padding-top: 5px;
+	border-bottom: 1.5px solid black
 }
 
 
@@ -128,14 +130,15 @@ video {
 }
 
 .title {
-	font-size: 24px;
+	font-family: neue-haas-grotesk-display, sans-serif;
+	font-size: 36px;
 	padding-left: 3vw;
 	font-weight: normal;
-	font-weight:300;
+	text-transform: uppercase;
 }
 
 h3 {
-	color: white;
+	color: black;
 	transition: all .3s linear;
 }
 
