--- a/assets/style.css
+++ b/assets/style.css
@@ -35,15 +35,14 @@ details[open] summary:before {
 
 
 
-hr.solid {
-  border-top: 1.5px solid #ffffff;
-}
-
 
 
 body {
 	font-family: sans-serif;
-	background-color: white;
+	/* background-color: white; */
+	background: rgb(0,33,255);
+	/* background: linear-gradient(rgba(9,9,121,1) 70%, rgba(0,33,255,1) 0%, ); */
+	background: linear-gradient(90deg, rgba(0,33,255,1) 0%, rgba(9,9,121,1) 70%, rgba(2,0,36,1) 100%);
 }
 
 
@@ -82,7 +81,7 @@ h1 {
 	font-weight: 350;
 	text-transform: uppercase;
 	font-size: 140px;
-	color: blue;
+	color: black;
 
 }
 
@@ -143,5 +142,9 @@ h3 {
 }
 
 h3:hover {
-	color:blue;
+	color:white;
 }
+
+
+
+@media only screen
