--- a/assets/style.css
+++ b/assets/style.css
@@ -41,8 +41,8 @@ body {
 	font-family: sans-serif;
 	/* background-color: white; */
 	background: rgb(0,33,255);
-	/* background: linear-gradient(rgba(9,9,121,1) 70%, rgba(0,33,255,1) 0%, ); */
-	background: linear-gradient(90deg, rgba(0,33,255,1) 0%, rgba(9,9,121,1) 70%, rgba(2,0,36,1) 100%);
+	background: linear-gradient(rgba(0,33,255,1) 0%, rgba(9,9,121,1) 70%, rgba(2,0,36,1) 150%);
+	padding-bottom: 20px;
 }
 
 
@@ -54,9 +54,22 @@ width: 100%;
 top: 0;
 left: 0;
 padding-left: 2.65vw;
+padding-right: 2.65vw;
 }
 
 
+footer {
+	background-color:transparent;
+	position: sticky;
+	height: 170px;
+	width: 100%;
+	top: 0;
+	left: 0;
+	padding-left: 2.65vw;
+	padding-right: 2.65vw;
+	opacity: .2;
+
+}
 headerfont {
 	margin-top: 0px;
 }
@@ -68,6 +81,7 @@ section {
 	padding: 0px;
 	display: block;
 	border-top: 1.5px solid black
+
 }
 
 
@@ -91,7 +105,7 @@ p{
 	font-weight: 500;
 	text-transform: uppercase;
 	font-size: 0px;
-	color: blue;
+	color: pink;
 }
 
 figure {
@@ -120,18 +134,21 @@ img {
 	width: auto;
 	height: 400px;
 	padding-left: 3vw;
+	padding-right: 3vw;
 }
 
 video {
 	width: auto;
 	height: 400px;
 	padding-left: 3vw;
+	padding-right: 3vw;
 }
 
 .title {
 	font-family: neue-haas-grotesk-display, sans-serif;
 	font-size: 36px;
 	padding-left: 3vw;
+	padding-right: 3vw;
 	font-weight: normal;
 	text-transform: uppercase;
 }
@@ -147,4 +164,75 @@ h3:hover {
 
 
 
-@media only screen
+@media only screen and (max-width:375px) {
+
+	h1 {
+		font-size: 56px;
+		line-height: 100%;
+	}
+
+	header {
+		height: 100%;
+		position: sticky;
+		padding-top: 15px;
+		padding-bottom: 15px;
+		padding-left: 24px;
+		padding-right: 24px;
+	}
+
+
+
+	footer {
+		height: 100%;
+		position: sticky;
+		padding-top: 15px;
+		padding-bottom: 15px;
+		padding-left: 24px;
+		padding-right: 24px;
+	}
+
+
+.title {
+	font-size: 18px;
+	padding-left: 24px;
+	padding-right: 24px;
+}
+
+.rounded-container {
+	padding-bottom: 5px;
+	padding-top: 5px;
+	border-bottom: 1px solid black
+}
+
+section {
+	width: 100vw;
+	height: auto
+	padding-left: 24px;
+	padding-right: 24px;
+		display: block;
+	border-top: 1px solid black
+}
+
+
+	img {
+		height: auto;
+		width: auto;
+		padding-left: 24px;
+		padding-right: 24px;
+	}
+
+	video {
+		height: auto;
+		width: auto;
+		padding-left: 24px;
+		padding-right: 24px;
+	}
+
+	/* header {
+			width: 100%;
+			background: transparent;
+			position: absolute;
+			padding: 0px;
+			margin: 0px;
+		} */
+}
