--- a/assets/style.css
+++ b/assets/style.css
@@ -135,6 +135,7 @@ img {
 	height: 400px;
 	padding-left: 3vw;
 	padding-right: 3vw;
+	margin-bottom: 10px;
 }
 
 video {
@@ -142,6 +143,8 @@ video {
 	height: 400px;
 	padding-left: 3vw;
 	padding-right: 3vw;
+	margin-bottom: 10px;
+
 }
 
 .title {
@@ -179,18 +182,6 @@ h3:hover {
 		padding-left: 24px;
 		padding-right: 24px;
 	}
-
-
-
-	footer {
-		height: 100%;
-		position: sticky;
-		padding-top: 15px;
-		padding-bottom: 15px;
-		padding-left: 24px;
-		padding-right: 24px;
-	}
-
 
 .title {
 	font-size: 18px;
